--- a/style.css
+++ b/style.css
@@ -39,12 +39,27 @@ nav {
     top: 110px;
     left: 2px;
 }
-#linkedin { 
+#linkedin {
+    font-style:oblique; 
     position: absolute;
+    text-decoration: none;
     top: 490px;
     left: 57px;
+    border: 2px solid rgb(8, 8, 8);
+    border-radius: 10px;
+    background: rgb(92, 155, 73);
+    color: rgb(255, 255, 255);
+    width: 10%;
+    margin: auto;
+    padding-left: 10px;
+    padding-bottom: 4px;
     
     }
+    #linkedin:hover { 
+        background-color: rgb(245, 13, 13);
+
+    }
+
 
 .div-1 {
     position: absolute;
@@ -92,12 +107,12 @@ article {
 
     position: absolute;
     left: 25px;
-    bottom: -200px;
+    top: 900px;
     text-align: justify;
 }
 
 footer {
-    position: relative;
+    position: absolute;
     bottom: 0px;
     left: 0px;
     right: 0px;
