--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ main {
   width: 300px;
   border-radius: 50%;
   margin-bottom: -15px;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
 }
 
 .button {
