--- a/style.css
+++ b/style.css
@@ -17,19 +17,18 @@ h3 {
   right: 0;
   background-color: rgb(52, 110, 84);
   height: 100px;
-} 
-
+}
 
 #titulo {
   color: whitesmoke;
   font-family:'Franklin Gothic Medium';
-  text-align: center;
+  text-align:center;
 }
 
 #minha_foto {
-  padding: 130px 30% 30px 30%;
+  padding: 130px 30% 30px;
   width: 300px;  
-  display: block;  
+  display:block;
 }
 
 #artigo {
@@ -48,11 +47,12 @@ h3 {
 .lado-esquerdo{
   background-color: rgb(110, 196, 154);
   width: 20%;
-  padding: 40px 30px 40px 30px;
+  padding: 40px 30px;
   color:rgb(253, 251, 251);
   font-size: 15px;
   font-family: cursive;
 }
+
 #licoes_aprendidas {
   line-height: 30px;
   padding: 30px 5% 10px 10%;
