--- a/style.css
+++ b/style.css
@@ -72,9 +72,13 @@ main {
   margin: 20px 0;
 }
 
+table {
+  border-collapse: collapse;
+}
+
 td {
   border: 1px solid rgb(50, 50, 50);
-  padding: 5px;
+  padding: 12px 8px;
 }
 
 p {
