--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
-body  { 
+body {
   background-color: rgb(253, 251, 251);
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 #cabecalho {
-  position:fixed; 
+  position: fixed;
   top: 0;
-  width: 100%; 
+  width: 100%;
   height: 75px;
-  background-color:#04AA6D;
+  background-color: rgb(4, 170, 109);
 }
 
 #div-title {
@@ -30,7 +30,7 @@ body  {
 
 #aside {
   margin-top: 75px;
-  float:right;
+  float: right;
   margin-left: 100px;
   width: 25%;
   text-align: center;
@@ -53,7 +53,7 @@ body  {
 
 #table-style th {
   border-collapse: collapse;
-  border: 2px solid #ddd;
+  border: 2px solid;
   padding: 10px;
   text-align: left;
 }
