--- a/style.css
+++ b/style.css
@@ -17,9 +17,12 @@ body {
     float: right;
 }
 
+
 header {
     background-color: rgb(238, 212, 188);
+    color: rgb(44, 34, 19);;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    line-height: normal;
     top: 0;
     width: 120vw;
     padding: 50px;
@@ -48,8 +51,13 @@ header h1 {
     padding: 25px;
 }
 
+.nav-main ul li:hover {
+    background-color: rgba(000, 000, 000, 0.1);    
+}
+
 .nav-main ul li a {
-  color: rgb(0, 0, 0);
+  color: rgb(36, 23, 12);
+  text-decoration: none;
 }
 
 main section {
@@ -60,6 +68,33 @@ main section {
 
 main li {
     padding: 5px;
+}
+
+main table {
+    cursor: pointer;
+}
+
+main table caption {
+    color: rgb(238, 212, 188);
+    font-weight: 900;
+    background-color: rgb(151, 130, 111);
+    border-radius: 35px;
+    padding: 10px;
+    margin: 5px;
+}
+
+main table th {
+    background-color: rgb(238, 212, 188);
+    border-radius: 35px;
+    padding: 10px;
+    margin: 5px;
+}
+
+main table tr td {
+    text-align: center;
+    background-color: rgb(238, 212, 188);
+    border-radius: 35px;
+    padding: 10px;
 }
 
 p, h2, h3 {
