--- a/style.css
+++ b/style.css
@@ -60,10 +60,10 @@ header h1 {
   text-decoration: none;
 }
 
-main section {
-    background-color: rgb(226, 196, 168);
-    border-radius: 35px;
-    
+
+#sobre {
+    margin-left: auto;
+    margin-right: auto;
 }
 
 main li {
@@ -112,7 +112,7 @@ footer {
 }
 
 
-article {
+.blocos {
     padding: 20px;  
     width: fit-content;
     background-color:rgb(238, 212, 188);
@@ -123,10 +123,12 @@ article {
 }
 
 
-section {
+article section {
     padding: 50px;
     margin: 10px;
     display: inline-block;
+    background-color: rgb(226, 196, 168);
+    border-radius: 35px;
 }
 
 #minha_foto {
