--- a/style.css
+++ b/style.css
@@ -26,10 +26,13 @@ h2 {
     padding-bottom: 100px;
     z-index: 10;
 }
+#titulo { 
+  margin-top: 30px;
+  margin-bottom: -30px;
+}
 
 .menu{
     list-style-type: none;
-
     
 }
 
@@ -99,10 +102,6 @@ h2 {
     left: 500px;
   float: right;
 }
-/*  position: absolute;
-    left: 50px;
-    top: 550px;
-    left: 50px;*/
 
 .lado-esquerdo, .lado-direito{ 
     float: left;
@@ -185,8 +184,3 @@ footer {
     padding: 25px;
     
 }
-
-
-/*    
-
-    /*     */
