--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
 body{background-color: rgb(253, 251, 251); }
-#cabecalho{ top: 0%;}
+#cabecalho{ top: 0%;
+background-color: rgb(181, 181, 197);}
 #titulo{}
+#minha_foto{width: 100px;}
+#licoes_apendidas { }
