--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-body{background-color: rgb(253, 251, 251); }
+body{background-color: rgb(253, 251, 251); 
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif}
 #cabecalho{ top: 0;
 background-color: rgb(181, 181, 197);
 position: fixed;
