--- a/style.css
+++ b/style.css
@@ -47,16 +47,26 @@ body {
 #minha_foto {
   width: 20%;
   border-radius: 100%;
-  margin-left: 40px;
 }
 
-.learn-section {
+.learned-section {
   background-color: rgb(219, 211, 216);
   border-radius: 10%;
   padding: 20px;
   margin-top: 3%;
-  margin-left: 6%;
-  margin-right: 2%;
+  margin-left: 7%;
+  margin-right: 4.7%;
+  width: 25%;
+  display: inline-block;
+}
+
+.to-learn-section {
+  background-color: rgb(219, 211, 216);
+  border-radius: 10%;
+  padding: 20px;
+  margin-top: 3%;
+  margin-left: 4.7%;
+  margin-right: 7%;
   width: 25%;
   display: inline-block;
 }
