--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-body {
-    background-color: rgb(253, 251, 251);
+body {background-color: rgb(253, 251, 251);
 }
 
-#cabecalho {
-    top: 0%;}
+#cabecalho { top: 0%;}
