--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {background-color: rgb(253, 251, 251);
 }
 
-#cabecalho { top: 0%;}
+#cabecalho { position: fixed; top: 0;}
+
+#minha_foto { margin-top: 80;}
