--- a/style.css
+++ b/style.css
@@ -24,24 +24,26 @@ body {
 #licoes_aprendidas , #licoes_a_aprender {
   display: inline-block;
   padding: 50px;
-  border:10px;
+  border: 10px;
 }
+
 .sobre {
   font-size: 20px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
   color: blueviolet;
   line-height: normal;
-
 }
+
 .lado-esquerdo {
   width: 49%;
   float: left;
 }
+
 .lado-direito {
   width: 49%;
   float: right;
-  
 }
+
 .ajuste {
   display: inline-block;
 }
