--- a/style.css
+++ b/style.css
@@ -37,9 +37,12 @@ body {
   width: 100%;
 }
 
+.first-section{
+  padding-top: 150px;
+}
+
 img {
   max-width: 500px;
-  margin-top: 150px;
 }
 
 nav ul li {
