--- a/style.css
+++ b/style.css
@@ -1,8 +1,80 @@
-body{
-    background-color: rgb(253, 251, 251);
+* {
+  margin: 0;
+  padding: 0;
+
 }
 
-#cabecalho{
-    position: fixed;
-    top: 0;
+body {
+  background-color: rgb(253, 251, 251);
+  font-family: Prompt;
+  
+}
+
+#cabecalho {
+  background-color: rgb(195, 222, 182);
+  position: fixed;
+  padding: 1% 36.5%;
+  top: 0;  
+  font-size: 14px;
+  color: teal;
+
+}
+
+
+#minha_foto {
+  border-radius: 100%;
+  margin-top: 25px;
+  margin-left: 3px;
+
+}
+
+#meu_nome {
+  margin-left: 25px;
+
+}
+
+#minhas_redes{
+  margin-left: 45px;
+
+}
+
+.lessons_container{
+  width: 30%;
+  margin-left: 35px;
+  margin-bottom: 15px;
+  display: inline-block;
+  line-height: 1.3;
+
+}
+
+.lessons_container p{
+  font-weight: bold;
+  color: #D39CB6;
+
+}
+
+article{
+  display: inline-block;
+  width: 50%;
+  margin-left:10px;
+
+}
+
+aside{
+  display: block;
+  width: 40%;
+  margin-left: 40px ;
+  padding: 10px;
+  float: right;
+  box-shadow: inset 5px 0 5px -5px #E6C1D2;
+
+}
+
+footer{
+  margin-top: 20px;
+  margin-left: 10px;
+  font-family: monospace;
+  font-size: 12px;
+  color: #D39CB6;
+
 }
