--- a/style.css
+++ b/style.css
@@ -60,10 +60,25 @@ header h1 {
   text-decoration: none;
 }
 
-
-#sobre {
+#minha_foto {
+    border-radius: 50%;
+    display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 30px;
+    margin-top: 200px;
+}
+
+.lista {
+    padding: 50px;
+    margin: 5px;
+    display: inline-block;
+    background-color: rgb(226, 196, 168);
+    border-radius: 35px;
+}
+
+.lista li {
+    margin: 10px;
 }
 
 main li {
@@ -75,16 +90,16 @@ main table {
 }
 
 main table caption {
-    color: rgb(238, 212, 188);
+    color: rgb(44, 34, 19);
     font-weight: 900;
-    background-color: rgb(151, 130, 111);
-    border-radius: 35px;
+    background-color: rgb(226, 196, 168);
+    border-radius:35px;
     padding: 10px;
     margin: 5px;
 }
 
 main table th {
-    background-color: rgb(238, 212, 188);
+    background-color: rgb(226, 196, 168);
     border-radius: 35px;
     padding: 10px;
     margin: 5px;
@@ -92,9 +107,14 @@ main table th {
 
 main table tr td {
     text-align: center;
-    background-color: rgb(238, 212, 188);
+    background-color: rgb(226, 196, 168);
     border-radius: 35px;
     padding: 10px;
+}
+
+main p {
+    line-height: 1.6;
+    margin: 20px;
 }
 
 p, h2, h3 {
@@ -111,7 +131,6 @@ footer {
     text-align: right;
 }
 
-
 .blocos {
     padding: 20px;  
     width: fit-content;
@@ -119,24 +138,5 @@ footer {
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 20px;
-    border-radius: 40px;
+    border-radius: 45px;
 }
-
-
-article section {
-    padding: 50px;
-    margin: 10px;
-    display: inline-block;
-    background-color: rgb(226, 196, 168);
-    border-radius: 35px;
-}
-
-#minha_foto {
-    border-radius: 50%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-    margin-top: 200px;
-}
-
