--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ body {
   width: 100%;
 }
 
+#rodape a {
+  color: rgb(255, 255, 252);
+}
+
 #rodape p {
   border-top: 1px solid rgba(131, 164, 216, 0.664);
   color: rgb(255, 255, 252);
@@ -81,4 +85,22 @@ body {
   margin-left: 10%;
   padding: 1%;
   width: 20%;
+}
+
+#tabela_course {
+  border-collapse: collapse;
+  float: right;
+  margin-right: 10%;
+  margin-top: 5%;
+}
+
+#tabela_course th {
+  background-color: rgb(160, 196, 255);
+  padding: 5px 10px;
+}
+
+#tabela_course td {
+  background-color: rgb(224, 236, 255);
+  padding: 5px 10px;
+  border: 1px solid rgb(160, 196, 255);
 }
