--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h2 {
 }
 
 #minha_foto {
-  padding: 130px 30% 30px;
+  padding: 130px 20% 30px;
   margin: 10px;
   width: 300px;  
 }
@@ -69,6 +69,34 @@ h2 {
   margin: 0;
   display: inline-table;
 
+}
+
+h3{
+ padding-left: 10%;
+ padding-right: 20%;
+ text-decoration:underline;
+ font-size: 16px;
+}
+
+#table-block {
+  padding-top: 100px;
+  padding-left: 6%;
+
+}
+
+table, th, td {
+  border: 1px solid black;
+  background-color: rgb(52, 110, 84);
+  width: 70%;
+} 
+
+th {
+  background-color: rgb(50, 118, 85);
+  color: rgb(253, 251, 251);
+}
+
+td {
+  background-color: rgb(253, 251, 251);
 }
 
 #linksExternos {
